--- a/Interface/interface/views/layout.pug
+++ b/Interface/interface/views/layout.pug
@@ -25,3 +25,4 @@ head
   script(src='/javascripts/delete.js')
   script(src='/javascripts/pubform.js')
   script(src='/javascripts/eventform.js')
+  script(src='/javascripts/join.js')
