--- a/Interface/interface/views/feed.pug
+++ b/Interface/interface/views/feed.pug
@@ -119,9 +119,9 @@ block content
       .col-md-3
         .card(style='margin-top: 1rem')
           .card-block
-            h4.card-title=userInfo.name
+            h4.card-title=userI.name
           ul.list-group.list-group-flush
-            li.list-group-item=userInfo.number
+            li.list-group-item=userI.number
             li.list-group-item Mestrado em Engenharia Informática
           .card-block
             a.card-link(href='#') Editar Perfil
