frontend dev admin pages WIP

--- a/Interface/interface/views/admin-feed.pug
+++ b/Interface/interface/views/admin-feed.pug
@@ -1,6 +1,58 @@
 extends layout
 
 block content
+  .container-fluid.gedf-wrapper
+    .row
+      //perfil
+      .col-md-3
+        .card(style='margin-top: 1rem')
+          .card-block
+            h4.card-title Admin Feed
+          ul.list-group.list-group-flush
+            li.list-group-item Mestrado em Engenharia Informática
+      //publicação      
+      .col-md-6.gedf-main
+
+        .card(style='margin-top: 2rem')
+        each p in feed
+          .card-header
+            .row
+              .col-md-1
+                img.rounded-circle(width='45', height='45', src='../images/wp1.jpg')
+              .col-md-6
+                .h5=p.author
+                .h7.text-muted(style='font-size: 0.8rem')=p.author
+          .card-block
+            table.table(border="0")
+              tr
+                th Title / Text
+                th Tags
+                th Target
+                th Date
+                th
+              tr
+                td
+                  h5.card-title(style='color:#417aba')=p.title
+                  p.card-text=p.text
+                    | 
+                td
+                    p.card-text=p.tags
+                    |
+                td
+                    p.card-text=p.target
+                    |  
+                td
+                  .h7.text-muted(style='font-size: 0.8rem; margin-bottom: 1rem')
+                    i.fa.fa-clock-o=p.date
+                    |
+                td
+                  button.btn.btn-primary(onclick="deletePublication('" + p._id + "')") Delete
+
+
+                  
+                
+            
+
   .main.container
        button.btn.btn-primary(onclick="window.location.href = '/auth/logout'") Logout
        h1 Admin Feed
@@ -19,14 +71,8 @@ block content
             th Control
             each p in feed
               tr
-                td= p._id
-                td= p.title
-                td= p.text
-                td= p.date
                 td= p.filePath
                 td= p.fileMimetype
-                td= p.tags
-                td= p.target
                 td= p.author
                 td
                   table(border="1")
