--- a/Interface/interface/views/newPublication.pug
+++ b/Interface/interface/views/newPublication.pug
@@ -7,8 +7,8 @@ block content
         h1.display-4.m-b-2 New Publication
         form(action='/feed/newPublication' method='POST')
             div.form-group
-                label(for='text' class='cols-sm-2 control-label') Title:
-                    input(type='text' class='form-control' name='title' id='title')  
+                label(for='text' class='cols-sm-2 control-label') Titleses:
+                    input(type='text' placeholder='First name' class='form-control' name='title' id='title' )  
             div.form-group
                 label(for='text' class='cols-sm-2 control-label') Text:
                     textarea(rows="4" cols="50" class='form-control' name='text' id='text')  
