--- a/Interface/interface/views/profile.pug
+++ b/Interface/interface/views/profile.pug
@@ -55,5 +55,5 @@ block content
             h4 Eventos
         .list-group
           each e in profile.events
-            button.list-group-item.list-group-item-action(type='button') 
+            button.list-group-item.list-group-item-action(type='button')=e
             
